# nixcon-2024-player-template

./: Main.hs  Webserver.hs  flake.nix  webserver.cabal
