cabal-version:      2.4
name:               haskell
version:            0.1.0.0

author:             Florian Engel
maintainer:         engelflorian@posteo.de

executable webserver 
  main-is:          Main.hs
  build-depends:    base, servant, text, servant-server, warp
  default-language: Haskell2010
  ghc-options:      -Wall -Werror
